--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@wdns/vue-code-block": "^2.3.3",
     "pinia": "^2.2.2",
     "vue": "^3.4.37"
   },
