--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@vercel/analytics": "^1.3.2",
     "@wdns/vue-code-block": "^2.3.3",
     "pinia": "^2.2.2",
@@ -19,7 +20,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
-    "typescript": "^5.5.3",
+    "typescript": "^5.6.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
   }
