--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@vercel/analytics": "^1.3.2",
     "@wdns/vue-code-block": "^2.3.3",
     "pinia": "^2.2.2",
-    "vue": "^3.4.37"
+    "vue": "^3.4.37",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
